Prevent horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,11 @@ a:hover {
 }
 
 body {
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  padding: 0;
+  width: 100%;
 }
 
 button {
